# python-project-83

./: .env_example  .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  setup.cfg
.github/workflows/: my-test.yml
page_analyzer/: __init__.py  app.py  connection.py  db_url.py  seo.py  tools.py
page_analyzer/templates/: all_data.html  base.html  error_404.html  footer.html  header.html  index.html  layout.html  main.html  messages.html  specific_data.html
page_analyzer/templates/errors/: error_404.html  error_500.html
page_analyzer/templates/url/: url.html  urls.html
templates/: all_data.html  index.html  specific_data.html
